# copeapp-utils

pyignore/: Makefile  pyproject.toml
pyignore/src/pyignore/: main.py
pymake/: LICENSE  README.md  makefile  pyproject.toml
pymake/src/pymake/: Color.py  Make.py  MakeMap.py  Shell.py  __init__.py  main.py
pyshell/: makefile  pyproject.toml  run.sh
pyshell/src/pyshell/: __init__.py  main.py
pytree/: .gitignore  README.md  pyproject.toml
pytree/src/pytree/: main.py
