[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyignore"
authors = [
    {name = "tower_town", email = "tower_town@outlook.com"},
]
description = "pyignore for codeapp"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["codeapp", "tree"]
license = {text = "MIT"}
classifiers = [
    # "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<="3.10"',
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pyignore.__version__"}

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
pyignore = "pyignore.main:cli"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["pyignore*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["pyignore.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
