[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyshell"
authors = [
    {name = "tower_town", email = "tower_town@outlook.com"},
]
description = "pyshell for codeapp"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["codeapp", "shell"]
license = {text = "MIT"}
classifiers = [
    # "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'importlib-metadata; python_version<"3.10"',
]
version = "0.1"

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
pyshell = "pyshell.main:main"

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/